# climate-iot

./: .gitignore  CMakeLists.txt  main.cpp  todo.md
Controller/: Controller.cpp
cli/: CMakeLists.txt  Command.hpp  main.cpp
cli/ClimateClient/: ClimateClient.cpp  ClimateClient.hpp
cli/Controller/: Controller.cpp  Controller.hpp
server/: CMakeLists.txt
server/src/: ClimateEndpoint.cpp  ClimateEndpoint.hpp  ClimateHistoryEndpoint.cpp  ClimateHistoryEndpoint.hpp  ClimateRepository.hpp  ClimateServer.cpp  ClimateServer.hpp  HistoryRepository.hpp  Repository.cpp  Repository.hpp  Result.hpp  SQLite.cpp  SQLite.hpp  main.cpp  utils.hpp
test/py/: conftest.py  pyproject.toml  tox.ini
test/py/tests/: test_env.py
test/py/tests/test_climate_api/: test_device_crud.py
test/py/tests/test_climate_json_api/: test_device_crud.py  test_history_crud.py  test_ping.py
