[tool.poetry]
name = "python-tests"
version = "0.1.0"
description = "python tests for climate project"
authors = ["Mikita Chabatarovich <mikita.chabatarovich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tox = "^3.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
